# fhirpy

./: .env.template  .flake8  .gitignore  .pre-commit-config.yaml  README.md  license.txt  mypy.ini  pyproject.toml  pytest.ini
.github/workflows/: build-pacakge.yml  python-app.yml
examples/ecw/: ecw_prod_sandbox.py  ecw_sandbox.py
examples/epic/: epic_sandbox.py
src/fhirpy/: emr_smart_scopes.py  fhir.py  jwks.py  parse.py
tests/advancedmd/: smart-configuration.json  test_advancedmd_fhir_api.py
tests/ecw/: smart-configuration.json  test_ecw_fhir_api.py
tests/epic/: smart-configuration.json  test_epic_fhir_api.py
tests/fhir_api/: manifest.json  smart-configuration.json  test_fhir_api.py  test_fhir_request.py  test_fhir_response.py  test_parse.py
