[tool.poetry]
name = "python-fhirpy"
version = "1.0.0"
description = "Smart on FHIR bulk fhir API client wtih backend authorization"
authors = ["Matt Landowski <matthew.landowski@aspeninsights.com>"]
readme = "README.md"
packages = [ { include = "fhirpy", from = "src" }, ] 

[tool.poetry.dependencies]
python = ">=3.10,<3.13"
jwcrypto = "^1.5.0"

[tool.poetry.group.dev.dependencies]
black = "^23.9.1"
flake8 = "^6.1.0"
isort = "^5.12.0"
mypy = "^1.5.1"
pre-commit = "^3.4.0"
flake8-black = "^0.3.6"
types-requests = "^2.31.0.3"

[tool.poetry.group.test.dependencies]
pytest = "^7.4.2"
pytest-mock = "*"
requests-mock = "^1.11.0"


[tool.poetry.group.datascience.dependencies]
polars = "^0.19.5"
pandas = "^2.1.1"
pyspark = "^3.5.0"
pyarrow = "^13.0.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
pythonpath = ["src"]